# nfofetch

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: build-image.yml
app/: cli.py  config.py  cookie_store.py  main.py  schemas.py
app/scrapers/: base.py  javdb.py  registry.py
app/services/: file_service.py  nfo_service.py  scrape_service.py
app/static/css/: style.css
app/templates/: base.html  index.html
app/templates/partials/: file_browser.html  image_options.html  scrape_preview.html  scrape_result.html
