[project]
name = "nfofetch"
version = "0.1.0"
description = "FastAPI + HTMX 影片信息與圖片刮削器（Jellyfin NFO 生成，起始支持 javdb）"
authors = [
    { name = "nfofetch-user", email = "user@example.com" },
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "selectolax>=0.3.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "curl-cffi>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

